# Spine2Dump

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CompilerSettings.cmake  Dependencies.cmake  Formatting.cmake  ProjectOptions.cmake  Sources.cmake  StaticAnalysis.cmake
includes/cli/: args.h  parser.h  run.h
includes/core/: assets.h  spine_backend.h  spine_compat.h  spine_version.h
includes/render/: atlas_pages.h  cpu_renderer.h  gl_context.h  gpu_backend.h  gpu_frame.h  gpu_pipeline.h  gpu_renderer.h  image_io.h  media_encoder.h  render_canvas.h  render_options.h  spine_slot_walk.h
includes/utils/: display.h  file.h  log.h  path.h  termcolor.h
src/: main.c
src/cli/: args.c  args.h  parser.c  parser.h  run.c
src/core/: assets.c  spine_backend.c  spine_backend.h  spine_backend_impl.c  spine_compat.h  spine_version.c
src/render/: cpu_renderer.c  gfx_impl.c  gl_context.c  gpu_backend.c  gpu_frame.c  gpu_pipeline.c  gpu_renderer.c  image_io.c  media_encoder.c  render_canvas.c  render_options.h  software_rasterizer.c  software_rasterizer.h  spine_slot_walk.c
src/utils/: asset_bundle.c  asset_bundle.h  common.h  display.c  file.c  log.c  path.c  termcolor.c
